src/test/contracts/negative/interpreter_tests/test_failure3.mligo
let test =
  let f = (fun (_ : unit) (_ : unit) -> ()) in
  Test.originate f () 0tez
